# lazy_invaders

./: CMakeLists.txt
docs/gimp/: plans.xcf  player.xcf
docs/notes/: inputs
src/core/: base.hpp  config.hpp.in  core.cpp  core.hpp  game.hpp  init.cpp  init.hpp  main.cpp  version.hpp.in
src/game/: Enemy.cpp  Enemy.hpp  Player.hpp  data.cpp  data.hpp  game.hpp  handle_event.cpp  init.cpp  player.hpp  render.cpp  tick.cpp
src/utils/: geometry.cpp  geometry.hpp  point.hpp  random.cpp
